# EMsoftSuperbuild

./: .gitignore  CMakeLists.txt  Dockerfile  ReadMe.md
.github/workflows/: ubuntu-amd64.yml  ubuntu-arm64.yml  ubuntu.yml
cmake/: BuildType.cmake  DREAM3D_SDK_PluginList.txt  Doxygen_osx_install.sh.in  EMsoft_SDK_PluginList.txt  Eigen_DartConfiguration.tcl.in  External_Bcls.cmake  External_CLFortran.cmake  External_DOxygen.cmake  External_DREAM3DData.cmake  External_Eigen.cmake  External_FFTW.cmake  External_HDF5.cmake  External_JsonFortran.cmake  External_Qt5.cmake  External_TBB.cmake  External_json-fortran.cmake  Linux_DREAM3D_SDK.cmake  Linux_EMsoft_SDK.cmake  OSX_DREAM3D_SDK.cmake  OSX_EMsoft_SDK.cmake  Qt5_osx_install.sh.in  Qt_HeadlessInstall_Linux.js  Qt_HeadlessInstall_Win64.js  WIN_EMsoft_SDK.cmake
cmake/ITK/: Build_ITK.bat.in  Build_ITK.cmake.in
cmake/fftw/: Build_fftw.cmake.in
cmake/qwt/: qwtconfig.pri.in
cmake/qwt/src/: src.pro.in
projects/: Bcls.cmake  CLFortran.cmake  EbsdLib.cmake  Eigen.cmake  FFTW.cmake  HDF5.cmake  HDF5pl.cmake  JsonFortran.cmake  MKL.cmake  Qt5.cmake  TBB.cmake  ghcFilesystem.cmake  nlopt.cmake  oneTBB.cmake
projects/ITK/: Build_ITK.bat.in  Build_ITK.cmake.in
projects/apple/: OSX_EMsoftOO_SDK.cmake  OSX_EMsoft_SDK.cmake  OSX_UpdateRPaths.sh.in  Qt5_osx_install.sh.in  Qt_HeadlessInstall_OSX.js  mkl_osx_install.sh.in
projects/fftw/: Build_fftw.bat.in
projects/patches/oneTBB/: AppleClang.cmake
projects/unix/: Linux_EMsoftOO_SDK.cmake  Linux_EMsoft_SDK.cmake  Qt5_Linux_install.sh.in  Qt5_linux_install.sh.in  Qt_HeadlessInstall.js
projects/win32/: Qt_HeadlessInstall.bat  Qt_HeadlessInstall_Win64.js  WIN_EMsoftOO_SDK.cmake  WIN_EMsoft_SDK.cmake  mkl_HeadlessInstall_Win64.cfg.in
